# callmeuncle

./: .env  .gitignore  README.md  audiomode.py  main.py  pyproject.toml
callbeuncle/: Hello.bru  bruno.json
functions/: getWeather.py  storeAddress.py
server/: main.py
