[tool.poetry]
name = "callmeuncle"
version = "0.1.0"
description = ""
authors = ["Arush Kurundodi <arushkurundodi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-genai = "^0.3.0"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
flask-restful = "^0.3.10"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
